syntax = "proto3";

package educonn.api.user;

import "user/proto/user.proto";

service UserApi {
    rpc Create(CreateRequest) returns (CreateResponse) {};
    rpc Delete(DeleteRequest) returns (DeleteResponse) {};
    rpc Login(LoginRequest) returns (LoginResponse) {};
}

message CreateRequest {
    educonn.user.UserDetails user = 1;
}

message CreateResponse {
    educonn.user.UserDetails user = 1;
}

message DeleteRequest {
    string userId = 1;
}

message DeleteResponse {
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    string token = 2;
}
