syntax = "proto3";

package educonn.mail;

option go_package = "github.com/lukasjarosch/educonn-platform/mail/proto";

service Email {
    rpc Send (EmailRequest) returns (Response);
}

message EmailRequest {
    string from = 1;
    string to = 2;
    string subject = 3;
    string message = 4;
}

message Response {
}
